# swagger.json
@@ -29,6 +29,31 @@
                 }
             }
         },
+        "/user": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [],
+                "tags": [
+                    "user"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UserIn"
+                            }
+                        }
+                    },
+                    "description": "UserIn",
+                    "required": true
+                }
+            }
+        },
         "/user/current": {
             "get": {
                 "consumes": [
@@ -52,6 +77,9 @@
                     "username": {
                         "type": "string"
                     },
+                    "email": {
+                        "type": "string"
+                    },
                     "password": {
                         "type": "string"
                     }
@@ -59,6 +87,7 @@
                 "type": "object",
                 "required": [
                     "username",
+                    "email",
                     "password"
                 ]
             }
